<resources>
    <string name="app_name">ORC</string>
    <string name="bottom_menu_1">Скидки</string>
    <string name="bottom_menu_2">Категории</string>
    <string name="bottom_menu_3">История</string>
    <string name="bottom_menu_4">Избранные</string>
    <string name="bottom_menu_5">Профиль</string>

    <string name="tenge">\u20B8</string>
    <string name="dots">⋮</string>


    <string name="sort">Сортировка</string>
    <string name="sortByDateInc">Старые</string>
    <string name="sortByDateDec">Новые</string>
    <string name="sortByPriceInc">Дешевые</string>
    <string name="sortByPriceDec">Дорогие</string>
    <string name="sortByRateInc">Низкий рейтинг</string>
    <string name="sortByRateDec">Высокий рейтинг</string>
    <string name="sortByAreaInc">Минимальная площадь</string>
    <string name="sortByAreDec">Максимальная площадь</string>
    <string name="sortByAddNear">Близко</string>
    <string name="sortByAddFar">Далеко</string>
    <string name="GpsMessage">Чтобы получать более точные результаты, разрешите устройству определять ваше местоположение</string>
    <string name="sortByPriceStr">Сортировка по цене</string>


    <string name="check_to_pass">I accept terms and conditions.</string>
    <string name="error_message">Please accept terms and conditions first.</string>
    <string name="launch_intro_activity">Launch intro activity</string>
    <string name="lorem_ipsum">Lorem ipsum \n\ndolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</string>

    <string name="requiredField">Не корректный формат номера</string>
    <string name="send">Отправить</string>

    <string name="resendTheCode">Отправить код повторно</string>
    <string name="fake_tenge">250 \u20B8</string>

    <string name="fake_tenge2">\u20B8250 </string>


    <string name="settings_1">Город</string>
    <string name="settings_2">Ваше имя</string>
    <string name="settings_3">Номер телефона</string>
    <string name="settings_4">Новости</string>
    <string name="settings_5">Акции</string>
    <string name="settings_6">Позвонить в техподдержку</string>
    <string name="settings_7">Написать в техподдержку(whatsapp)</string>
    <string name="settings_8">Оцените приложение</string>
    <string name="settings_9">Рассказать друзьям</string>
    <string name="settings_10">О нас</string>
    <string name="settings_11">Конфиденциа́льность</string>
    <string name="settings_12">Соглашение пользователя</string>
    <string name="settings_13">ВЫЙТИ</string>


    <string name="settings_main_1">Пользовательские данные</string>
    <string name="settings_main_2">Помощь</string>
    <string name="settings_main_3">Юр.сведения</string>


    <string name="show_all_products">Показать все товары</string>
    <string name="apply_filter">Применить фильтр</string>


    <string name="error_gps">На вашем телефоне Gps отключен</string>
    <string name="gps_question">Включить?</string>


    <string name="cancle_request">Отмена заявки</string>
    <string name="question_request">Вы действительно хотите удалить заявку?</string>


    <string name="long_random_text">
        Depart do be so he enough talent. Sociable formerly six but handsome. Up do view time they shot. He concluded disposing provision by questions as situation. Its estimating are motionless day sentiments end. Calling an imagine at forbade. At name no an what like spot. Pressed my by do affixed he studied.

        He unaffected sympathize discovered at no am conviction principles. Girl ham very how yet hill four show. Meet lain on he only size. Branched learning so subjects mistress do appetite jennings be in. Esteems up lasting no village morning do offices. Settled wishing ability musical may another set age. Diminution my apartments he attachment is entreaties announcing estimating. And total least her two whose great has which. Neat pain form eat sent sex good week. Led instrument sentiments she simplicity.

        Arrived compass prepare an on as. Reasonable particular on my it in sympathize. Size now easy eat hand how. Unwilling he departure elsewhere dejection at. Heart large seems may purse means few blind. Exquisite newspaper attending on certainty oh suspicion of. He less do quit evil is. Add matter family active mutual put wishes happen.

        Surprise steepest recurred landlord mr wandered amounted of. Continuing devonshire but considered its. Rose past oh shew roof is song neat. Do depend better praise do friend garden an wonder to. Intention age nay otherwise but breakfast. Around garden beyond to extent by.

        And sir dare view but over man. So at within mr to simple assure. Mr disposing continued it offending arranging in we. Extremity as if breakfast agreement. Off now mistress provided out horrible opinions. Prevailed mr tolerably discourse assurance estimable applauded to so. Him everything melancholy uncommonly but solicitude inhabiting projection off. Connection stimulated estimating excellence an to impression.

        Allow miles wound place the leave had. To sitting subject no improve studied limited. Ye indulgence unreserved connection alteration appearance my an astonished. Up as seen sent make he they of. Her raising and himself pasture believe females. Fancy she stuff after aware merit small his. Charmed esteems luckily age out.

        Still court no small think death so an wrote. Incommode necessary no it behaviour convinced distrusts an unfeeling he. Could death since do we hoped is in. Exquisite no my attention extensive. The determine conveying moonlight age. Avoid for see marry sorry child. Sitting so totally forbade hundred to.

        Oh acceptance apartments up sympathize astonished delightful. Waiting him new lasting towards. Continuing melancholy especially so to. Me unpleasing impossible in attachment announcing so astonished. What ask leaf may nor upon door. Tended remain my do stairs. Oh smiling amiable am so visited cordial in offices hearted.

        Preserved defective offending he daughters on or. Rejoiced prospect yet material servants out answered men admitted. Sportsmen certainty prevailed suspected am as. Add stairs admire all answer the nearer yet length. Advantages prosperous remarkably my inhabiting so reasonably be if. Too any appearance announcing impossible one. Out mrs means heart ham tears shall power every.

        Good draw knew bred ham busy his hour. Ask agreed answer rather joy nature admire wisdom. Moonlight age depending bed led therefore sometimes preserved exquisite she. An fail up so shot leaf wise in. Minuter highest his arrived for put and. Hopes lived by rooms oh in no death house. Contented direction september but end led excellent ourselves may. Ferrars few arrival his offered not charmed you. Offered anxious respect or he. On three thing chief years in money arise of.
    </string>
    <string name="filter">Фильтры</string>
    <string name="search">Поиск</string>
    <string name="app_desc">Ввести свой адрес, подобрать удобный магазин рядом с домом, набрать товаров в корзину и получить их через 90 минут!</string>
    <string name="reg_desc">Чтобы заказать товар вместе с ОРЦ. Для начала нужно пройти регистрацию. Это займет не больше минуты.</string>
    <string name="empty_cat">В данной категорий нет товаров</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_location">Текущее местоположение</string>
    <string name="status1">В оброботке</string>
    <string name="status2">Заявка принята</string>
    <string name="status3">Курьер принял</string>
    <string name="status4">Заявка доставлена</string>
    <string name="status5">Заявка завершена</string>
    <string name="addCard">Добавить в корзину</string>
    <string name="date">ДАТЫ</string>
    <string name="orders">ЗАЯВКИ</string>
    <string name="sdad">sdad</string>
    <string name="send_sms">Отправить повторно</string>
    <string name="info_counter">Повторно код можете отправить через</string>
    <string name="empty_basket">Корзина пуста</string>
    <string name="txt_number">Введите номер телефона</string>
    <string name="logIn">Войти</string>
    <string name="tr"><![CDATA[Все отзывы & Оценки]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
